--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Pittsburgh Forensics Institute</title>
+	<title>NA Hackathon</title>
 	<link rel="shortcut icon" type="image/png" href="assets/images/gavel.png">
 
 	<meta charset="utf-8">
@@ -36,7 +36,7 @@
 					<li><a href="#home">Home</a></li>
 					<li><a href="#info">General Info</a></li>
 					<li><a href="#faq">FAQ</a></li>
-					<li><a href="#curriculum">Curriculum</a></li>
+					<li><a href="#schedule">Schedule</a></li>
 					<li><a href="#about">About</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</div>
@@ -130,9 +130,9 @@
 		</div>
 	</div>
 
-	<!-- curriculum -->
-	<div class="container-fluid bg-curriculum bg-curriculum-text" id="curriculum">
-		<h1 class="text-center">CURRICULUM</h1>
+	<!-- schedule -->
+	<div class="container-fluid bg-schedule bg-schedule-text" id="schedule">
+		<h1 class="text-center">SCHEDULE</h1>
 		<div class="row">
 			<div class="col-sm-6">
 				<h3><b>Lincoln-Douglas Debate (LD)</b></h3>
