--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<div class="container-fluid text-center bg-home" id="home">
 		<div class="container-fluid text-center bg-home-text">
 			<h1>North Allegheny Hackathon</h1>
-			<p><b>A 12 hour coding marathon</b></p>
+			<p><b>A high-school programming compeition for the Greater Pittsburgh Area</b></p>
 			<a class="btn btn-warning" href="https://goo.gl/forms/fGtRRlAaa4dLMaGk2">SIGN UP</a>
 		</div>
 	</div>
