--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<div class="container-fluid text-center bg-home-text">
 			<h1>North Allegheny Hackathon</h1>
 			<p><b>A high-school programming compeition for the Greater Pittsburgh Area</b></p>
-			<a class="btn btn-warning" href="https://goo.gl/forms/fGtRRlAaa4dLMaGk2">SIGN UP</a>
+			<a class="btn btn-primary" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
 		</div>
 	</div>
 
@@ -133,39 +133,7 @@
 	<!-- schedule -->
 	<div class="container-fluid bg-schedule bg-schedule-text" id="schedule">
 		<h1 class="text-center">SCHEDULE</h1>
-		<div class="row">
-			<div class="col-sm-6">
-				<h3><b>Lincoln-Douglas Debate (LD)</b></h3>
-				<p>Lincoln Douglas debate is a one-on-one debate that is focused on philosophy and logic.  The debate topics change every two months and are based on what is morally right or wrong. Lincoln Douglas heightens proficiency in speaking, argumentation, and research. Lincoln-Douglas debaters, with their experience in rebuttal delivery and speech writing, soon become well versed in philosophy and become more fluent and confident speakers.</p>
-			</div>
-			<div class="col-sm-6">
-				<h3><b>Public Forum Debate (PF)​​</b></h3>
-				<p>Public Forum Debate is audience friendly debate. Two pairs (teams) debate monthly controversial topics ripped from newspaper headlines. Rounds begin with a coin toss between the competing teams to determine side and order (Pro-Con or Con-Pro). Public Forum tests skills in argumentation, cross-examination, and refutation.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-6">
-				<h3><b>Extemporaneous Speaking (Extemp)</b></h3>
-				<p>Extemporaneous Speaking is an event that combines quick-thinking and memorization. Competitors will draw a current events question, and then have 30 minutes to prepare a speech in response. Contestants can use a variety of books, magazines, and articles to craft their speech. After 30 minutes, the competitor will deliver their speech for up to 7 minutes. Extemporaneous topics cover a variety of international and domestic issues. All extemporaneous speakers quickly learn about a variety of international issues and will become more confident speaking about the changing world around them.</p>
-			</div>
-			<div class="col-sm-6">
-				<h3><b>Original Oratory (OO)</b></h3>
-				<p>Orators are expected to research and speak intelligently, with a degree of originality, in an interesting manner, and with some profit to the audience, about a topic of significance. Although many orations deal with a current problem and propose a solution this is not the only acceptable form of oratory. Your oration may simply alert the audience to a threatening danger, strengthen its devotion to an accepted cause, or eulogize a person. An orator is given free choice of subject and judged solely on the effectiveness of development and presentation.</p>
-			</div>
-		</div>
-		<div class="row">			
-			<div class="col-sm-6">
-				<h3><b>Interpretation (Interp)</b></h3>
-				<p>
-					Based on their style (below), interpretation competitors take a piece of literature and cut it to ten minutes. They are then are to perform the piece, making it their own.
-					<ul>
-						<li>Dramatic Interp (DI): ​This is an individual category in which the selections are dramatic in nature. Selections shall be cuttings from published-printed novels, short stories, plays, poetry, or any other printed-published materials. Presentations must be memorized, without props or costumes. The time limit is 10 minutes which includes an introduction.</li>
-						<li>Humorous Interp (HI):​​​ This is an individual category in which the selections are humorous in nature. All other rules are the same as Dramatic Interpretation.</li>
-						<li>Duo Interp (Duo):​ This is a two-person category in which the selection may be either humorous or dramatic in nature. All other rules are the same as Dramatic Interpretation.</li>
-					</ul>
-				</p>
-			</div>
-		</div>
+		<p>The schedule is yet to be released.</p>
 	</div>
 
 	<!-- about us -->
@@ -196,7 +164,7 @@
 					Feel free to contact us at anytime.
 					<br>
 					<br>
-					Email: <a href="mailto:contact@pghforensics.org">contact@pghforensics.org</a>
+					Email: <a href="mailto:contact@projectcodeone.org">contact@projectcodeone.org</a>
 					<br>
 					NA Phone Number: <a>(724) 934-7200</a>
 					<br>
