got rid of variables

--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
 		<h1 class="text-center">GENERAL INFO</h1>
 		<div class="row">
 			<div class="col-sm-4">
-				<h3><span class="glyphicon glyphicon-paperclip" style="color: var(--primary-color)"></span>&nbsp;&nbsp;&nbsp;<b>What?</b></h3>
+				<h3><span class="glyphicon glyphicon-paperclip" style="color: #1abc9c"></span>&nbsp;&nbsp;&nbsp;<b>What?</b></h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat ac odio a tristique. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla magna diam, semper sed sagittis vitae, interdum at felis. Integer et mauris fermentum, malesuada elit sit amet, luctus leo. Vestibulum luctus ullamcorper sagittis. Mauris eget tellus cursus.</p>
 			</div>			
 			<div class="col-sm-4">
-				<h3><span class="glyphicon glyphicon-calendar" style="color: var(--primary-color)"></span>&nbsp;&nbsp;&nbsp;<b>When?</b></h3>
+				<h3><span class="glyphicon glyphicon-calendar" style="color: #1abc9c"></span>&nbsp;&nbsp;&nbsp;<b>When?</b></h3>
 				<p>The Hackathon will be taking place on a Saturday during either November or December. The exact date is yet to be decided.</p>
 			</div>
 			<div class="col-sm-4">
-				<h3><span class="glyphicon glyphicon-map-marker" style="color: var(--primary-color)"></span>&nbsp;&nbsp;&nbsp;<b>Where?</b></h3>
+				<h3><span class="glyphicon glyphicon-map-marker" style="color: #1abc9c"></span>&nbsp;&nbsp;&nbsp;<b>Where?</b></h3>
 				<p>
 					The North Allegheny Hackathon will take place at the NA Senior High School.
 					<br>
