updated the faq

--- a/index.html
+++ b/index.html
@@ -88,44 +88,36 @@
 
 		<div class="row">
 			<div class="col-sm-4">
-				<h3><b>Question #1</b></h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat ac odio a tristique. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+				<h3><b>What is a hackathon?</b></h3>
+				<p>A hackathon is best described as an “invention marathon”. Anyone who has an interest in technology attends a hackathon to learn, build &amp; share their creations over the course of a weekend in a relaxed and welcoming atmosphere. You don’t have to be a programmer and you certainly don’t have to be majoring in Computer Science.</p>
 			</div>
 			<div class="col-sm-4">
-				<h3><b>Question #2</b></h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat ac odio a tristique. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+				<h3><b>What if I don't know how to code?</b></h3>
+				<p>Not a problem! It’s entirely irrelevant what your experience is going into a hackathon, it’s more about your interest in technology. We are passionate about making our hackathons very welcoming and beginner-friendly. If you’re wanting to learn how to code outside of a hackathon, check out the following: Treehouse or Codecademy, to get started.</p>
 			</div>
 			<div class="col-sm-4">
-				<h3><b>Question #3</b></h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat ac odio a tristique. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-4">
-				<h3><b>Question #4</b></h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat ac odio a tristique. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-			</div>
-			<div class="col-sm-4">
-				<h3><b>Question #5</b></h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat ac odio a tristique. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-			</div>
-			<div class="col-sm-4">
-				<h3><b>Question #6</b></h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat ac odio a tristique. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+				<h3><b>What if I don't have an idea?</b></h3>
+				<p>That’s normal. Most people don’t have an idea before they get to the event. But once you start talking to other people, you might come up with something. You can also work with somebody else on their idea if you like it. And there will be prizes at the event which might help give you some ideas. Don’t worry about it, you’ll find something to work on.</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-sm-4">
-				<h3><b>Question #7</b></h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat ac odio a tristique. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+				<h3><b>Will there be food?</b></h3>
+				<p>Absolutely! We will provide a light breakfast in the morning, buffet-styled lunch catered from ______, and pizza for dinner. There’ll also be plenty of snacks and drinks to keep you energized. If you’ve got specific dietary requirements, you should let us know during registration on the Google Form, and we will be more than happy to make arrangements.</p>
 			</div>
 			<div class="col-sm-4">
-				<h3><b>Question #8</b></h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat ac odio a tristique. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+				<h3><b>How do I sign up?</b></h3>
+				<p>Sign up through the Google Form on the Sign Up page. Share the link with your friends and school to get your friends involved as well!</p>
 			</div>
 			<div class="col-sm-4">
-				<h3><b>Question #9</b></h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat ac odio a tristique. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+				<h3><b>Do I need my own laptop?</b></h3>
+				<p>We will have a cart for you to borrow for the day. Please indicate whether you need to borrow a laptop on the Google Form so we can prepare. Also let us know on the Google Form if you require any basic hardware or tools. We will respond to requests before the day of the Hackathon to let you know if we can provide those materials for your hack.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-4">
+				<h3><b>What's the schedule for the day?</b></h3>
+				<p>There will be a light breakfast and keynote speech in the morning followed by the meeting up of group members and brainstorming of ideas. There will be workshops throughout the day and lunch around noon. In addition to workshops, the afternoon will be filled with light refreshments and project work. The evening will include a pizza dinner and presentation of projects followed by the awards ceremony.</p>
 			</div>
 		</div>
 	</div>
