added cool new background image

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				</div>			
 				<div class="col-sm-4">
 					<h3><span class="glyphicon glyphicon-calendar" style="color: #FFA000"></span>&nbsp;&nbsp;&nbsp;<b>When?</b></h3>
-					<p>The Hackathon will be taking place on a Saturday during either November or December. The exact date is yet to be decided.</p>
+					<p>The Hackathon will be taking place on December 16, 2017.</p>
 				</div>
 				<div class="col-sm-4">
 					<h3><span class="glyphicon glyphicon-map-marker" style="color: #FFA000"></span>&nbsp;&nbsp;&nbsp;<b>Where?</b></h3>
