got rid of lorem ipsum text and put in actual stuff

--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<h3><span class="glyphicon glyphicon-paperclip" style="color: #FFA000"></span>&nbsp;&nbsp;&nbsp;<b>What?</b></h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce volutpat ac odio a tristique. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla magna diam, semper sed sagittis vitae, interdum at felis. Integer et mauris fermentum, malesuada elit sit amet, luctus leo. Vestibulum luctus ullamcorper sagittis. Mauris eget tellus cursus.</p>
+					<p>HackNA is a high school hackathon taking place at North Allegheny Senior High School on Saturday, December 16, 2017. During the competition, you will have 12 hours to create a software or hardware project from scratch based on a central theme revealed on site. No prior experience is required – we welcome anyone interested and will be providing workshops and mentor expertise to help you get started! At the end of the day, teams will pitch their project to a panel of judges in a chance to win sponsored prizes and rewards.</p>
 				</div>			
 				<div class="col-sm-4">
 					<h3><span class="glyphicon glyphicon-calendar" style="color: #FFA000"></span>&nbsp;&nbsp;&nbsp;<b>When?</b></h3>
-					<p>The Hackathon will be taking place on December 16, 2017.</p>
+					<p>HackNA will be taking place on Saturday, December 16, 2017 from 8am to 8pm.</p>
 				</div>
 				<div class="col-sm-4">
 					<h3><span class="glyphicon glyphicon-map-marker" style="color: #FFA000"></span>&nbsp;&nbsp;&nbsp;<b>Where?</b></h3>
 					<p>
-						The North Allegheny Hackathon will take place at the NA Senior High School.
+						HackNA will take place at North Allegheny Senior High School.
 						<br>
 						<a href="#map">10375 Perry Hwy, Wexford, PA 15090</a>
 					</p>
