--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<!-- home/bigimage -->
 	<div class="container-fluid text-center bg-home" id="home">
 		<div class="container-fluid text-center bg-home-text">
-			<h1>North Allegheny Hackathon</h1>
+			<h1>HackNA</h1>
 			<p><b>A high-school programming competition for the Greater Pittsburgh Area</b></p>
 			<a class="btn btn-primary" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
 			
@@ -153,7 +153,7 @@
 			<h1 class="text-center">ABOUT US</h1>
 			<div class="row">
 				<div class="col-sm-6">
-					<img class="staff-image img-scalable" src="images/akshathjain.jpg">
+					<img class="staff-image img-scalable clickable" src="images/akshathjain.jpg" onclick="window.location.assign('http://akshathjain.com')">
 					<h3><b>Akshath Jain</b></h3>
 					<p>Co-Founder / Organizer</p>
 				</div>
@@ -176,9 +176,9 @@
 						Feel free to contact us at anytime.
 						<br>
 						<br>
-						Email: <a href="mailto:contact@hackna.org">contact@hackna.org</a>
+						Email: <a class="link-light" href="mailto:contact@hackna.org">contact@hackna.org</a>
 						<br>
-						NA Phone Number: <a>(724) 934-7200</a>
+						NA Phone Number: <a class="link-light">(724) 934-7200</a>
 						<br>
 						<br>
 						<br>
@@ -194,7 +194,7 @@
 		<!-- footer -->
 		<footer class="container-fluid bg-footer bg-footer-text">
 
-			<p>©2017 HackNA. All rights reserved. Website designed and developed by Akshath Jain.</p>
+			<p>©2017 HackNA. All rights reserved. Website designed and developed by <a class="link-light" href="http://akshathjain.com">Akshath Jain<a>.</p>
 		</footer>
 
 	</div>
