changed descriptor text on homescreen

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<div class="container-fluid text-center bg-home" id="home">
 		<div class="container-fluid text-center bg-home-text">
 			<h1>HackNA</h1>
-			<p><b>A high-school programming competition for the Greater Pittsburgh Area</b></p>
+			<p><b>A high-school hackathon for the Greater Pittsburgh Area</b></p>
 			<a class="btn btn-primary" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
 			
 		</div>
