updated parts of the faq

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 					<img src="images/logo.png" height="55px" align="left" hspace="20" style="margin-top: -17px;"> 
 					HackNA
 				</a>
-				</div>
-				<div class="collapse navbar-collapse" id="mainNav">
-					<div class="nav navbar-nav navbar-right">
-						<li><a href="#home">Home</a></li>
-						<li><a href="#info">General Info</a></li>
+			</div>
+			<div class="collapse navbar-collapse" id="mainNav">
+				<div class="nav navbar-nav navbar-right">
+					<li><a href="#home">Home</a></li>
+					<li><a href="#info">General Info</a></li>
 					<li><a href="#faq">FAQ</a></li><!-- 
 					<li><a href="#schedule">Schedule</a></li> -->
 					<li><a href="#about">About</a></li>
@@ -100,13 +100,13 @@
 				<div class="col-sm-4">
 					<div class="card">
 						<h3><b>What if I don't know how to code?</b></h3>
-						<p>Not a problem! It’s entirely irrelevant what your experience is going into a hackathon, it’s more about your interest in technology. We are passionate about making our hackathons very welcoming and beginner-friendly. If you’re wanting to learn how to code outside of a hackathon, check out the following: Treehouse or Codecademy, to get started.</p>
+						<p>That's not a problem! Your experience doesn't matter for you to be successful at a hackathon. We're passionate about making our hackathons very welcoming and beginner-friendly, which is why we're also going to be providing optional workshops throughout the day to help you get started if you need it.</p>
 					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="card">
 						<h3><b>What if I don't have an idea?</b></h3>
-						<p>That’s normal. Most people don’t have an idea before they get to the event. But once you start talking to other people, you might come up with something. You can also work with somebody else on their idea if you like it. And there will be prizes at the event which might help give you some ideas. Don’t worry about it, you’ll find something to work on.</p>
+						<p>That’s completley ok. Most teams don’t have an idea before they get to the event. But once you start talking to other people, you might come up with something. If you still don't, you can talk with one of our mentors or attend one of our workshops to help you get started. But don’t worry about it too much, you’ll find something to work on.</p>
 					</div>
 				</div>
 			</div>
@@ -114,7 +114,7 @@
 				<div class="col-sm-4">
 					<div class="card">
 						<h3><b>Will there be food?</b></h3>
-						<p>Absolutely! We will provide a light breakfast in the morning, buffet-styled lunch catered from ______, and pizza for dinner. There’ll also be plenty of snacks and drinks to keep you energized. If you’ve got specific dietary requirements, you should let us know during registration on the Google Form, and we will be more than happy to make arrangements.</p>
+						<p>Absolutely! We will be providing food throughout the day. There’ll also be plenty of snacks and drinks to keep you energized. If you’ve got specific dietary requirements, you should let us know when you sign up, and we will be more than happy to make arrangements.</p>
 					</div>
 				</div>
 				<div class="col-sm-4">
@@ -125,16 +125,22 @@
 				</div>
 				<div class="col-sm-4">
 					<div class="card">
-						<h3><b>Do I need my own laptop?</b></h3>
-						<p>We will have a cart for you to borrow for the day. Please indicate whether you need to borrow a laptop on the Google Form so we can prepare. Also let us know on the Google Form if you require any basic hardware or tools. We will respond to requests before the day of the Hackathon to let you know if we can provide those materials for your hack.</p>
+						<h3><b>Do I need my own laptop/computer?</b></h3>
+						<p>If you have one that you can bring, we recommend that you do. However, if you're unable to, we will have some for you to borrow. Please indicate whether you need to borrow a laptop when you sign up so we can prepare accordingly.</p>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="card">
-						<h3><b>What's the schedule for the day?</b></h3>
-						<p>There will be a light breakfast and keynote speech in the morning followed by the meeting up of group members and brainstorming of ideas. There will be workshops throughout the day and lunch around noon. In addition to workshops, the afternoon will be filled with light refreshments and project work. The evening will include a pizza dinner and presentation of projects followed by the awards ceremony.</p>
+						<h3><b>Will there be WiFi?</b></h3>
+						<p>Yes, we will be providing WiFi access.</p>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="card">
+						<h3><b>Can I submit past projects?</b></h3>
+						<p>No, to keep true to the spirit of a hackathon, you may not submit past projects. All projects must be fully developed on site at HackNA. This ensures a level playing field and keeps the competition fair. If a team is discovered to be using a past project, they will be immediately disqualified.</p>
 					</div>
 				</div>
 			</div>
