fixed logo resizing issue when hamburger menu is open

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<span class="icon-bar"></span>
 				</a>
 				<a class="navbar-brand">
-					<img src="images/logo.png" height="55px" align="left" hspace="20" style="margin-top: -17px;"> 
+					<img src="images/logo.png" class="logo" align="left" hspace="20" style="margin-top: -17px;" id="logo-image"> 
 					HackNA
 				</a>
 			</div>
