did some stuff to mobile viewport with minor ui tweaks

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					HackNA
 				</a>
 			</div>
-			<div class="collapse navbar-collapse" id="mainNav">
+			<div class="collapse navbar-collapse" id="mainNav" style="border-top: 0px;">
 				<div class="nav navbar-nav navbar-right">
 					<li><a href="#home">Home</a></li>
 					<li><a href="#info">General Info</a></li>
