--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>HackNA</title>
-	<link rel="shortcut icon" type="image/png" href="images/logo.png">
+	<link rel="shortcut icon" type="image/svg" href="images/logo.svg">
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +27,7 @@
 					<span class="icon-bar"></span>
 				</a>
 				<a class="navbar-brand">
-					<img src="images/logo.png" class="logo" align="left" hspace="20" style="margin-top: -17px;" id="logo-image"> 
+					<img src="images/logo.svg" class="logo" align="left" hspace="20" style="margin-top: -17px;" id="logo-image"> 
 					HackNA
 				</a>
 			</div>
