linked the facebook page

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 						<br>
 						<br>
 						<br>
-						<a href="https://www.facebook.com/"><img class="social-media-icons" src="images/facebook.png"></a>&nbsp;&nbsp;&nbsp;
+						<a href="https://www.facebook.com/hacknorthallegheny"><img class="social-media-icons" src="images/facebook.png"></a>&nbsp;&nbsp;&nbsp;
 						<a href="https://twitter.com/"><img class="social-media-icons" src="images/twitter.png"></a>&nbsp;&nbsp;&nbsp;
 						<a href="https://instagram.com/"><img class="social-media-icons" src="images/instagram.png"></a>
 					</p>
