--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>HackNA</title>
-	<link rel="shortcut icon" type="image/svg" href="images/logo.svg">
+	<link rel="shortcut icon" type="image/png" href="images/logo.png">
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -49,8 +49,8 @@
 		<div class="container-fluid text-center bg-home-text">
 			<h1>HackNA</h1>
 			<p><b>A high-school hackathon for the Greater Pittsburgh Area</b></p>
-			<a class="btn btn-primary" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
-			
+			<a class="btn btn-warning" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
+			<a class="btn btn-danger" href="https://goo.gl/forms/K0V0ocFAN8jM8G8q1">VOLUNTEER</a>
 		</div>
 	</div>
 
