added a sponsor button on the home screen

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 			<p><b>A high-school hackathon for the Greater Pittsburgh Area</b></p>
 			<a class="btn btn-warning" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
 			<a class="btn btn-danger" href="https://goo.gl/forms/K0V0ocFAN8jM8G8q1">VOLUNTEER</a>
+			<a class="btn btn-success" href="sponsors.html">SPONSOR</a>
 		</div>
 	</div>
 
