--- a/sponsors.html
+++ b/sponsors.html
@@ -63,7 +63,7 @@
 			</div>
 			<div class="collapse navbar-collapse" id="mainNav" style="border-top: 0px;">
 				<div class="nav navbar-nav navbar-right">
-					<li><a>Sponsor</a></li>
+					<li><a>Sponsorship Information</a></li>
 				</div>
 			</div>
 		</div>
