index now takes up full viewport on mobile and desktop

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 				<div class="nav navbar-nav navbar-right">
 					<li><a href="#home">Home</a></li>
 					<li><a href="#info">General Info</a></li>
-					<li><a href="#faq">FAQ</a></li><!-- 
-					<li><a href="#schedule">Schedule</a></li> -->
+					<li><a href="#faq">FAQ</a></li>
+					<!--<li><a href="#schedule">Schedule</a></li>-->
+					<li><a href="#sponsor">Sponsor</a></li>
 					<li><a href="#about">About</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</div>
@@ -151,9 +152,14 @@
 		<!-- <div class="container-fluid bg-schedule bg-schedule-text" id="schedule">
 			<h1 class="text-center">SCHEDULE</h1>
 			<p>The schedule is yet to be released.</p>
-		</div>
+		</div> -->
 
-		<br><br><br> -->
+		<!-- sponsor ship information -->
+		<div class="container-fluid text-center bg-sponsor bg-sponsor-text" id="sponsor">
+			<h3><b>Interested in sponsoring us?</b></h3>
+			<p>Help foster a high school tech community by partnering with us.</p>
+			<a class="btn btn-success" href="sponsors.html">SPONSOR</a>
+		</div>
 
 		<!-- about us -->
 		<div class="container-fluid text-center bg-about bg-about-text" id="about">
