added table hover to suggested contributions on sponsors.html

--- a/sponsors.html
+++ b/sponsors.html
@@ -91,7 +91,7 @@
 		<!-- table outlining sponsor ship packages -->
 		<h3><b>Suggested Contributions</b></h3>
 		<div class="table-responsive">
-			<table class="table">
+			<table class="table table-hover">
 				<thead>
 					<tr>
 						<th>Sponsorship Level</th>
