updated back button behavior on sponsors.html

--- a/sponsors.html
+++ b/sponsors.html
@@ -59,7 +59,7 @@
 	<nav class="navbar navbar-default navbar-fixed-top navbarStateWhenScrolled">
 		<div class="container">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html#about"><span style="font-size: 15px;" class="glyphicon glyphicon-menu-left"></span>&nbsp;&nbsp;&nbsp;BACK</a>
+				<a class="navbar-brand" href="index.html#sponsor"><span style="font-size: 15px;" class="glyphicon glyphicon-menu-left"></span>&nbsp;&nbsp;&nbsp;BACK</a>
 			</div>
 			<div class="collapse navbar-collapse" id="mainNav" style="border-top: 0px;">
 				<div class="nav navbar-nav navbar-right">
