added google analytics tracking information

--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 	<script src="scripts/scripts.js"></script>
 
+	<!-- google analytics -->
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-105971579-1', 'auto');
+		ga('send', 'pageview');
+
+	</script>
+
 </head>
 <body class="body-background-image">
 
@@ -84,7 +96,7 @@
 		<!-- map (with google maps)-->
 		<div class="container-fluid bg-map bg-map-text" id="map">
 			<!-- <div onclick="document.getElementById('map-iframe').style.pointerEvents='auto';"> -->
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3029.2001365367123!2d-80.05552548459839!3d40.60340777934375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88348a2d25043fe9%3A0x6a22a9ccf29b0137!2sNorth+Allegheny+Senior+High+School!5e0!3m2!1sen!2sus!4v1497377331763" width="100%" height="620" frameborder="0" style="border:0; /*pointer-events: none;*/" allowfullscreen="false" id="map-iframe"></iframe>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3029.2001365367123!2d-80.05552548459839!3d40.60340777934375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88348a2d25043fe9%3A0x6a22a9ccf29b0137!2sNorth+Allegheny+Senior+High+School!5e0!3m2!1sen!2sus!4v1497377331763" width="100%" height="620" frameborder="0" style="border:0; /*pointer-events: none;*/" allowfullscreen="false" id="map-iframe"></iframe>
 			<!-- </div> -->
 		</div>
 
