changed text on site and button behavior

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 		<div class="container-fluid text-center bg-sponsor bg-sponsor-text" id="sponsor">
 			<h3><b>Interested in sponsoring us?</b></h3>
 			<p>Help foster a high school tech community by partnering with us.</p>
-			<a class="btn btn-success" href="sponsors.html">SPONSOR</a>
+			<a class="btn btn-success" href="sponsors.html">SPONSORSHIP INFORMATION</a>
 		</div>
 
 		<!-- about us -->
