--- a/sponsors.html
+++ b/sponsors.html
@@ -29,11 +29,11 @@
 			margin-top: 120px;
 		}
 
-		.page-content h3{
+		.page-content h3, .grey-content h3{
 			font-size: 18px;
 		}
 
-		.page-content p{
+		.page-content p, .grey-content p{
 			font-size: 16px;
 		}
 
@@ -41,6 +41,14 @@
 			.page-content{
 				width: 85%;
 			}
+		}
+
+		.grey-content{
+			background-color: #F2F5F7;
+			padding-right: 50px;
+			padding-left: 50px;
+			padding-top: 70px;
+			padding-bottom: 70px;
 		}
 
 		th{
@@ -155,7 +163,12 @@
 			</table>
 		</div>		
 		<br>
+	</div>
 
+	<!-- get in contact with us section -->
+	<div class="grey-content text-center">
+		<h3><b>Interested in sponsoring us?</b></h3>
+		<p>Contact us at <a href="mailto:sponsor@hackna.org">sponsor@hackna.org</a> to get the process started!</p>
 	</div>
 
 	<!-- footer -->
