changed some text

--- a/sponsors.html
+++ b/sponsors.html
@@ -168,7 +168,7 @@
 	<!-- get in contact with us section -->
 	<div class="grey-content text-center">
 		<h3><b>Interested in sponsoring us?</b></h3>
-		<p>Contact us at <a href="mailto:sponsor@hackna.org">sponsor@hackna.org</a> to get the process started!</p>
+		<p>Contact us at <a href="mailto:sponsor@hackna.org">sponsor@hackna.org</a> to get started!</p>
 	</div>
 
 	<!-- footer -->
