added a custom signup buttom to faq section

--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 			</div>
 			<div class="table-cell card">
 				<h3><b>How do I sign up?</b></h3>
-				<p>Sign up through the Google Form on the Sign Up page. Share the link with your friends and school to get your friends involved as well!</p>
+				<p>You can sign up by clinking the sign up button on the home page or the one below. Remember to share the link with friends to get them involved as well!</p>
+				<a class="btn-custom" href="https://goo.gl/forms/x6iOkU71a8G8JEi63">SIGN UP</a>
 			</div>
 			<div class="table-cell card">
 				<h3><b>Do I need my own laptop/computer?</b></h3>
